follow the guideline to finsh it

--- a/mysite/polls/templates/polls/detail.html
+++ b/mysite/polls/templates/polls/detail.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>My test page</title>
+    <title>Detail</title>
   </head>
   <body>
     <h1>{{ question.question_text }}</h1>
@@ -16,11 +16,11 @@
     {% endfor %}
     <input type="submit" value="Vote">
     </form>
-    <ul>
+    {% comment %} <ul>
       {% for choice in question.choice_set.all %}
         <li>{{ choice.choice_text }}<li>
       {% endfor %}
-    </ul>
+    </ul> {% endcomment %}
   </body>
 </html>
 
