--- a/mysite/polls/templates/polls/index.html
+++ b/mysite/polls/templates/polls/index.html
@@ -1,9 +1,21 @@
-{% if latest_question_list %}
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="utf-8">
+    <title>My test page</title>
+    {% load static %}
+    <link rel="stylesheet" type="text/css" href="{% static 'polls/style.css' %}">
+  </head>
+  <body>
+    {% if latest_question_list %}
     <ul>
-    {% for question in latest_question_list%}
-        <li><a href="{% url 'polls:detail' question.id %}">{{ question.question_text }}</a></li>
-    {% endfor %}
+        {% for question in latest_question_list%}
+            <li><a href="{% url 'polls:detail' question.id %}">{{ question.question_text }}</a></li>
+        {% endfor %}
     </ul>
-{% else %}
+    {% else %}
     <p>No pools are available.</p>
-{% endif %}
+    {% endif %}
+  </body>
+</html>
+
